@@ -3336,39 +3336,42 @@ static const struct LevelUpMove sHitmontopLevelUpLearnset[] = {
 #if P_FAMILY_LICKITUNG
 static const struct LevelUpMove sLickitungLevelUpLearnset[] = {
     LEVEL_UP_MOVE( 1, MOVE_LICK),
-    LEVEL_UP_MOVE( 5, MOVE_SUPERSONIC),
-    LEVEL_UP_MOVE( 9, MOVE_DEFENSE_CURL),
-    LEVEL_UP_MOVE(13, MOVE_KNOCK_OFF),
-    LEVEL_UP_MOVE(17, MOVE_WRAP),
-    LEVEL_UP_MOVE(21, MOVE_STOMP),
-    LEVEL_UP_MOVE(25, MOVE_DISABLE),
-    LEVEL_UP_MOVE(29, MOVE_SLAM),
-    LEVEL_UP_MOVE(33, MOVE_ROLLOUT),
+    LEVEL_UP_MOVE( 1, MOVE_DEFENSE_CURL),
+    LEVEL_UP_MOVE( 6, MOVE_ROLLOUT),
+    LEVEL_UP_MOVE(12, MOVE_SUPERSONIC),
+    LEVEL_UP_MOVE(18, MOVE_WRAP),
+    LEVEL_UP_MOVE(24, MOVE_DISABLE),
+    LEVEL_UP_MOVE(30, MOVE_STOMP),
+    LEVEL_UP_MOVE(36, MOVE_KNOCK_OFF),
     LEVEL_UP_MOVE(37, MOVE_CHIP_AWAY),
     LEVEL_UP_MOVE(41, MOVE_ME_FIRST),
+    LEVEL_UP_MOVE(42, MOVE_SCREECH),
     LEVEL_UP_MOVE(45, MOVE_REFRESH),
-    LEVEL_UP_MOVE(49, MOVE_SCREECH),
-    LEVEL_UP_MOVE(53, MOVE_POWER_WHIP),
+    LEVEL_UP_MOVE(48, MOVE_SLAM),
+    LEVEL_UP_MOVE(54, MOVE_POWER_WHIP),
+    LEVEL_UP_MOVE(60, MOVE_BELLY_DRUM),
+    LEVEL_UP_MOVE(60, MOVE_COIL),
     LEVEL_UP_END
 };
 
 #if P_GEN_4_CROSS_EVOS
 static const struct LevelUpMove sLickilickyLevelUpLearnset[] = {
-    LEVEL_UP_MOVE( 1, MOVE_POWER_WHIP),
     LEVEL_UP_MOVE( 1, MOVE_LICK),
-    LEVEL_UP_MOVE( 5, MOVE_SUPERSONIC),
-    LEVEL_UP_MOVE( 9, MOVE_DEFENSE_CURL),
-    LEVEL_UP_MOVE(13, MOVE_KNOCK_OFF),
-    LEVEL_UP_MOVE(17, MOVE_WRAP),
-    LEVEL_UP_MOVE(21, MOVE_STOMP),
-    LEVEL_UP_MOVE(25, MOVE_DISABLE),
-    LEVEL_UP_MOVE(29, MOVE_SLAM),
-    LEVEL_UP_MOVE(33, MOVE_ROLLOUT),
+    LEVEL_UP_MOVE( 1, MOVE_DEFENSE_CURL),
+    LEVEL_UP_MOVE( 1, MOVE_ROLLOUT),
+    LEVEL_UP_MOVE( 1, MOVE_SUPERSONIC),
+    LEVEL_UP_MOVE(18, MOVE_WRAP),
+    LEVEL_UP_MOVE(24, MOVE_DISABLE),
+    LEVEL_UP_MOVE(30, MOVE_STOMP),
+    LEVEL_UP_MOVE(36, MOVE_KNOCK_OFF),
     LEVEL_UP_MOVE(37, MOVE_CHIP_AWAY),
     LEVEL_UP_MOVE(41, MOVE_ME_FIRST),
+    LEVEL_UP_MOVE(42, MOVE_SCREECH),
     LEVEL_UP_MOVE(45, MOVE_REFRESH),
-    LEVEL_UP_MOVE(49, MOVE_SCREECH),
-    LEVEL_UP_MOVE(53, MOVE_POWER_WHIP),
+    LEVEL_UP_MOVE(48, MOVE_SLAM),
+    LEVEL_UP_MOVE(54, MOVE_POWER_WHIP),
+    LEVEL_UP_MOVE(60, MOVE_BELLY_DRUM),
+    LEVEL_UP_MOVE(60, MOVE_COIL),
     LEVEL_UP_MOVE(61, MOVE_GYRO_BALL),
     LEVEL_UP_END
 };
@@ -4844,6 +4847,7 @@ static const struct LevelUpMove sMunchlaxLevelUpLearnset[] = {
 #endif //P_GEN_4_CROSS_EVOS
 
 static const struct LevelUpMove sSnorlaxLevelUpLearnset[] = {
+    LEVEL_UP_MOVE( 1, MOVE_SLACK_OFF),
     LEVEL_UP_MOVE( 1, MOVE_ODOR_SLEUTH),
     LEVEL_UP_MOVE( 1, MOVE_SNATCH),
     LEVEL_UP_MOVE( 1, MOVE_UPROAR),
